--- a/Workshop4.html/Workshop4.html
+++ b/Workshop4.html/Workshop4.html
@@ -15,11 +15,13 @@
     <main id="app">
         <div id="users"></div>
         <div>
+        <div class="title">Equipment Selection</div>
+        <div class="buttons">
         <button id="namedescending">Sort by First Name (Descending)</button>
         <button id="descriptionascending">Description (Ascending)</button>
         <button id="attackbigger">Attack (bigger than 100)</button>
-        <button id="attackdollars">Attack as Dollars</button>
-        <button id="attackascending">Attack (Ascending)</button>
+        <button id="attackdollars">Attack as HP</button>
+        <button id="attackascending">Attack (Ascending)</button></div>
 
         </div>
     </main>
