--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -7,10 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./Project4_Part3.css" />
     <!--  -->
-    <script src="./Project3_Part3.js" type="text/javascript" defer></script>
+    <script src="./Project4_Part3.js" type="text/javascript" defer></script>
 </head>
 <body>
 
+<img src="./Image/bubble wrap-01.jpg">
+<div class="container">
+    <div id="b"></div>
+    <div id="three"></div>
+    <div id="four"></div>
+    <div id="keyboard"></div>
+    <div class="feedback" id="keyborad-feedback"></div>
+</div>
 
 
 
