--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -13,11 +13,35 @@
 
 <img src="./Image/bubble wrap-01.jpg">
 <div class="container">
-    <div id="b"></div>
+    <div id="v"></div>
     <div id="three"></div>
     <div id="four"></div>
+    <div id="five"></div>
+    <div id="six"></div>
+    <div id="seven"></div>
+    <div id="eight"></div>
+    <div id="w"></div>
+    <div id="e"></div>
+    <div id="r"></div>
+    <div id="t"></div>
+    <div id="y"></div>
+    <div id="u"></div>
+    <div id="i"></div>
+    <div id="s"></div>
+    <div id="d"></div>
+    <div id="f"></div>
+    <div id="g"></div>
+    <div id="h"></div>
+    <div id="j"></div>
+    <div id="x"></div>
+    <div id="c"></div>
+    <div id="v"></div>
+    <div id="b"></div>
+    <div id="n"></div>
+    <div id="m"></div>
     <div id="keyboard"></div>
     <div class="feedback" id="keyborad-feedback"></div>
+    <div class="mouse">Try using the keyboard!</div>
 </div>
 
 
