--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -42,6 +42,11 @@
     <div id="keyboard"></div>
     <div class="feedback" id="keyborad-feedback"></div>
     <div class="mouse">Try using the keyboard!</div>
+    <div class="box">
+    <div class="welldone">Well Done!</div>
+    <div class="refresh">The page will automatically refresh after...seconds</div>
+
+   </div>
 </div>
 
 
