--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -37,18 +37,18 @@
     <div id="c"></div>
     <div id="v"></div>
     <div id="b"></div>
+    <div id="ba"></div>
     <div id="n"></div>
-    <div id="m"></div>
+    <div id="na"></div>
     <div id="keyboard"></div>
     <div class="feedback" id="keyborad-feedback"></div>
     <div class="mouse">Try using the keyboard!</div>
     <div class="box">
     <div class="welldone">Well Done!</div>
     <div class="refresh">The page will automatically refresh after...seconds</div>
-
+    
    </div>
 </div>
-
 
 
 </body>
