--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -14,33 +14,69 @@
 <img src="./Image/bubble wrap-01.jpg">
 <div class="container">
     <div id="v"></div>
+    <div class="a" id="va"></div>
     <div id="three"></div>
+    <div class="a"id="threea"></div>
     <div id="four"></div>
+    <div class="a" id="foura"></div>
     <div id="five"></div>
+    <div class="a" id="fivea"></div>
     <div id="six"></div>
+    <div class="a" id="sixa"></div>
     <div id="seven"></div>
+    <div class="a" id="sevena"></div>
     <div id="eight"></div>
+    <div class="a" id="eighta"></div>
     <div id="w"></div>
+    <div class="a" id="wa"></div>
     <div id="e"></div>
+    <div class="a" id="ea"></div>
     <div id="r"></div>
+    <div class="a" id="ra"></div>
     <div id="t"></div>
+    <div class="a" id="ta"></div>
     <div id="y"></div>
+    <div class="a" id="ya"></div>
     <div id="u"></div>
+    <div class="a" id="ua"></div>
     <div id="i"></div>
+    <div class="a" id="ia"></div>
     <div id="s"></div>
+    <div class="a" id="sa"></div>
     <div id="d"></div>
+    <div class="a" id="da"></div>
     <div id="f"></div>
+    <div class="a" id="fa"></div>
     <div id="g"></div>
+    <div class="a" id="ga"></div>
     <div id="h"></div>
+    <div class="a" id="ha"></div>
     <div id="j"></div>
+    <div class="a" id="ja"></div>
     <div id="x"></div>
+    <div class="a" id="xa"></div>
     <div id="c"></div>
+    <div class="a" id="ca"></div>
     <div id="v"></div>
+    <div class="a" id="va"></div>
     <div id="b"></div>
-    <div id="ba"></div>
+    <div class="a" id="ba"></div>
     <div id="n"></div>
-    <div id="na"></div>
-    <div id="keyboard"></div>
+    <div class="a" id="na"></div>
+    <div id="m"></div>
+    <div class="a" id="ma"></div>
+    <div id="control"></div>
+    <div class="a" id="controla"></div>
+    <div id="option"></div>
+    <div class="a" id="optiona"></div>
+    <div id="command"></div>
+    <div class="a" id="commanda"></div>
+    <div id="space"></div>
+    <div class="a" id="spacea"></div>
+    <div id="command2"></div>
+    <div class="a" id="command2a"></div>
+    <div id="option2"></div>
+    <div class="a" id="option2a"></div>
     <div class="feedback" id="keyborad-feedback"></div>
     <div class="mouse">Try using the keyboard!</div>
     <div class="box">
