--- a/Project4/Project4_Part3.html
+++ b/Project4/Project4_Part3.html
@@ -10,9 +10,12 @@
     <script src="./Project4_Part3.js" type="text/javascript" defer></script>
 </head>
 <body>
+    <div id="container">
+    <div id="box"></div>
+    <div class="mouse">Try using the keyboard! Open the volumn!<br/><br/> This pressure-released website was designed by Yuntong Chen</div>
+<img id="background" src="./Image/bubble wrap-01.jpg">
+</div>
 
-<img src="./Image/bubble wrap-01.jpg">
-<div class="container">
     <div id="v"></div>
     <div class="a" id="va"></div>
     <div id="three"></div>
@@ -78,13 +81,7 @@
     <div id="option2"></div>
     <div class="a" id="option2a"></div>
     <div class="feedback" id="keyborad-feedback"></div>
-    <div class="mouse">Try using the keyboard!</div>
-    <div class="box">
-    <div class="welldone">Well Done!</div>
-    <div class="refresh">The page will automatically refresh after...seconds</div>
     
-   </div>
-</div>
 
 
 </body>
