--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello World!</title>
+    <title>Movie Poster</title>
+    <title>Soul</title>
     <link rel="stylesheet" href="/Assignment3/assignment3.css" />
-
+   
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
@@ -19,6 +20,7 @@
     <div class="detailcontainer">
       -By Pete Docter
     </div>
+    <p class="description">Joe Gardner is a middle school teacher with a love for jazz music. After a successful gig at the Half Note Club, he suddenly gets into an accident that separates his soul from his body and is transported to the You Seminar, a center in which souls develop and gain passions before being transported to a newborn child.</p>
     
   </body>
   <script>
