--- a/Assignment4/Assignemnt4.html
+++ b/Assignment4/Assignemnt4.html
@@ -74,7 +74,7 @@ font-weight:bold;
 border-radius: 15px;
 color:black;
 top:50%;
-left:30%;
+left:23%;
 font-weight:bold;
         }
         .logo .word .main-letter{font-size:60px;}
@@ -97,14 +97,16 @@ font-weight:bold;
   body {
     background-color: rgb(204, 253, 204);
   }
+
 }
 
 @media screen and (max-width: 800px) {
         .container {color:white;
          background-color:rgb(255, 161, 175);
-          font-size:15px;
+          font-size:10px;
           border-radius:50%;
           text-transform: uppercase;
+          text-align:center;
         }
         .logo .word .main-letter {
           
