--- a/Assignment5/Assignment5(2).html
+++ b/Assignment5/Assignment5(2).html
@@ -52,11 +52,17 @@ top:400px;
 left:200px;
 color:#6cdc56;
 background-color:black;}
+
+@media only screen and (max-width:1250px) {
+.description{left:100px;
+font-size:12px;}
+.Introduction{left:80%;}
+}
 </style>
 <body>
     <img class="broadway" src="Images/broadway-1.jpg">
     <div class="Introduction"><a href="/Assignment5/Assignment5.html">Back</div></a>
-    <div class="description">Broadway theatre, or Broadway, are the theatrical performances presented in the 41 professional theatres, <br/>each with 500 or more seats, located in the Theater District and the Lincoln Center along Broadway, in Midtown Manhattan,<br/> New York City.Broadway and London's West End together represent the highest commercial level of live theater <br/>in the English-speaking world.[3]</div>
+    <div class="description">Broadway theatre, or Broadway, are the theatrical performances presented in the 41 professional theatres, <br/>each with 500 or more seats, located in the Theater District and the Lincoln Center along Broadway, in Midtown Manhattan,<br/> New York City.Broadway and London's West End together represent the highest commercial level of live theater <br/>in the English-speaking world.</div>
 </body>
 <script>
 
