--- a/Assignment5/Assignment5(3).html
+++ b/Assignment5/Assignment5(3).html
@@ -81,6 +81,33 @@ color:#ea4ebf;
     -webkit-filter: grayscale(100%);}
 .video:hover, video:visited{filter: grayscale(0%);
     -webkit-filter: grayscale(0%);}
+@media only screen and (max-width:1200px) {
+    .Aladdin{left:10%;
+        top:80%;
+        font-size:70px;
+    }
+    .description{font-size:12px;
+    top:43%;
+left:10%;
+width:200px;}
+.video{max-width:35%;
+max-height:35%;
+height:35%;
+left:10%;}
+.A{ top:7%;
+    left:63%;
+    max-width:45%;
+max-height:25%;}
+.L{top:37%;
+    left:63%;
+    max-width:45%;
+max-height:25%;}
+.a{top:67%;
+    left:63%;
+    max-width:45%;
+max-height:25%;}
+
+}
 </style>
 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/h4sl3sQPzgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <body>
