--- a/Assignment5/Assignment5(4).html
+++ b/Assignment5/Assignment5(4).html
@@ -24,7 +24,7 @@ filter: grayscale(100%);
 .video:hover{filter: grayscale(0%);
 -webkit-filter: grayscale(0%);}
 .mask{position:fixed;
-top:335px;
+top:380px;
 left:1105px;
 max-width:65%;
 max-height:65%;
@@ -83,6 +83,42 @@ left:750px;
 top:650px;
 color:#802331;
 background-color:black;}
+@media only screen and (max-width:1200px) {
+  .Aladdin{font-size:70px;
+  top:65%;}
+  .mask{top:50%;
+  left:75%;
+max-width:60%;
+max-height:60%;
+height:60%;}
+.Back{left:10%;}
+}
+@media only screen and (max-width:900px){
+  .Aladdin{font-size:45px;
+  top:70%;}
+  .mask{top:65%;
+  left:75%;
+max-width:45%;
+max-height:45%;
+height:45%;}
+.video{max-width:60%;}
+.description{font-size:15px;
+width:250px;
+left:80%;
+height:100px;
+}
+.P{max-width:60%;
+max-height:35%;
+left:130%}
+.H{max-width:65%;
+max-height:35%;
+left:200%;}
+.A{max-width:60%;
+max-height:35%;
+left:265%;}
+.Back{left:20%;}
+}
+
 </style>
 <body>
 
