--- a/Assignment5/Assignment5.html
+++ b/Assignment5/Assignment5.html
@@ -74,6 +74,50 @@ left:350px;
 opacity: 0.9;}
 .Description1{position:absolute;
 top:3000px;}
+@media only screen and (max-width:600px) {
+  .Broadway{font-size:40px;}
+  .broadway{max-width:103%;
+max-height:103%;
+height:103%;
+left:35%;}
+.Aladdin{top:250px;
+left:380px;
+font-size:13px;}
+.Phantom{top:450px;
+left:380px;
+font-size:13px;}
+.Introduction{top:50px;
+left:380px;
+font-size:13px;}
+}
+@media only screen and (min-width:600px) {
+  .Broadway{font-size:80px;}
+  .Introduction{top:50px;
+left:80%;
+font-size:18px;}
+.Aladdin{top:450px;
+left:80%;
+font-size:18px;}
+.Phantom{top:650px;
+left:80%;
+font-size:18px;
+width:50px;}
+}
+@media only screen and (min-width:1300px) {
+  .Broadway{font-size:135px;}
+  .Introduction{position:absolute;
+left:1250px;
+top:70px;}
+.Aladdin{position:absolute;
+top:1500px;
+left:1000px;
+font-style: italic;}
+.Phantom{position:absolute;
+top:1700px;
+left:1000px;
+font-style: italic;
+border-width: 10px;}
+}
 
     </style>
 
