--- a/Assignment8/Assignment8.html
+++ b/Assignment8/Assignment8.html
@@ -14,7 +14,7 @@
     <main id="app">
         <div id="information">
             <h1>Flowers of Fire: Illustrations from Japanese Fireworks Catalogues (ca. 1880s) </h1>
-            <p>The spinning saxon, flying pigeons, polka batteries, jumping jacks and firecrackers, squibs and salutes,
+            <p class="description">The spinning saxon, flying pigeons, polka batteries, jumping jacks and firecrackers, squibs and salutes,
                 Aztec Fountains, Bengal Lights, and Egyptian Circlets, bangers or bungers, cakes, crossettes, candles,
                 and a
                 Japanese design known as kamuro (boys haircut), which looks like a bobbed wig teased out across the
