--- a/Assignment11/Assignemnt11.html
+++ b/Assignment11/Assignemnt11.html
@@ -18,5 +18,14 @@
         </form>
         <p class="feedback" id="feedback"></p>
       </div>
+      <div id="a"></div>
+      <div id="b"></div>
+      <div id="c"></div>
+      <div id="d"></div>
+      <div id="e"></div>
+      <div id="f"></div>
+      <div id="g"></div>
+      <div id="h"></div>
+      <div id="i"></div>
 
 </body>
