--- a/test/test.html
+++ b/test/test.html
@@ -29,7 +29,7 @@
             <p class="question">2. In your own words, explain what Git and Github are used for and the main
                 differences between them.</p>
             <div class="answer">
-                <!-- answer goes here -->
+               Git is a control tool that keep tracking and record every adjustments you made. Github will not immediately record changes you made in local code, but a centralized location that stores the code once you pushed origin from Git.
             </div>
         </div>
 
