--- a/test/test.html
+++ b/test/test.html
@@ -43,7 +43,7 @@ a:visited {
             <p class="question">2. In your own words, explain what Git and Github are used for and the main
                 differences between them.</p>
             <div class="answer">
-               Git is a control tool that keep tracking every adjustments you made. Github will not immediately record changes from your own local file, but a stable and centralized storage that needs your click "pushed origin" on Git in order to upload to Github.
+               Git is a control tool that keeps tracking every adjustment you made. Github will not immediately record changes from your own local file, but a stable and centralized storage for data. Once your click "pushed origin" on Git, the file will be uploaded to Github.
             </div>
         </div>
 
@@ -54,7 +54,7 @@ a:visited {
                 webpages.
             </p>
             <div class="answer">
-                HTML helps structure and add content to the web. Importing texts, images, videos and attaching links from external site all can be accomplished in HTML.
+                HTML helps structure and add content to the web. Importing texts, images, videos and attaching links from both external and internal sites can be accomplished in HTML.
             </div>
         </div>
 
@@ -65,7 +65,7 @@ a:visited {
                 webpages..
             </p>
             <div class="answer">
-                CSS helps costomize every elements you add on HTML. For instance, you can change size, position, opacity, adding filter nearly every characteristic of the elements you added in HTML.
+                CSS helps costomize every element you add on HTML. For instance, you can change size, position, opacity, adding filter nearly every characteristic of the elements you added in HTML.
             </div>
         </div>
 
