--- a/test/test.html
+++ b/test/test.html
@@ -27,7 +27,7 @@ a:visited {
 </style>
 <body>
     <main>
-        <h1>PUCD 2126<br />Assignment 1: Course Review Test</h1>
+        <h1>PUCD 2126<br />Course Review Test</h1>
 
         <div>
             <p class="question">1. Please download this file and add it to your Github Pages in a folder called 'Test'
