--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
     <meta name="description" content="A repository for information on the Core 2 Interaction Lab course.">
     <meta name="author" content="Yuntong Chen">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Radio+Canada:wght@300;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Radio+Canada:wght@300;400;500&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./Test.css" />
     <script src="./Test.js" type="text/javascript" defer></script>
 
