--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -12,15 +12,17 @@
   </head>
   <body>
     <img src="https://cdn.glitch.global/b92cf685-dae6-462e-b12f-1326a43792d9/ca-times.brightspotcdn.jpg?v=1645198596087">
-    <div class="container">Soul</div>  
-    <div class="line">
+    <header class="page-header">
+      <h1>Soul</h1>
+      <h4>Pixar Production</h4>
+  </header>
   <div class="descriptioncontainer">
     
 "Can't Crush A Soul Here. That's What Life On Earth Is For."
     </div>
     <div class="detailcontainer">
       -By Pete Docter
-    </div></div>
+    </div>
     <p class="description">Joe Gardner is a middle school teacher with a love for jazz music. After a successful gig at the Half Note Club, he suddenly gets into an accident that separates his soul from his body and is transported to the You Seminar, a center in which souls develop and gain passions before being transported to a newborn child.</p>
     
   </body>
