--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="Assignment3"><a href="https://yuntongchen.github.io/Assignment3/assignment3.html">Workshop-Movie poster</div></a>
       <div class="Assignment4"><a href="https://yuntongchen.github.io/Assignment4/Assignemnt4.html">Assignment3</div></a>
       <div class="Assignment5"><a href="https://yuntongchen.github.io/Assignment5/Assignment5.html">Assignment4</div></a>
-      <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6.html">Assignment5</div></a>
-      <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment5(2)</div></a>
+      <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment5</div></a>
+      <div class="Assignment6b"><a href="./Assignment6/Assignment6(3).html">Assignment5(revised)</div></a>
       <div class="Assignment7"><a href="https://yuntongchen.github.io/Assignment8/Assignment8.html">Assignment6</div></a>
       <div class="Assignemnt8"><a href="https://yuntongchen.github.io/Assignment9/Assignment10.html">Assignment7</div></a>
       <div class="Workshop3"><a href="./Assignment7/Assignment7.html">Workshop3</a></div>
