--- a/Assignment5/Assignment5(3).html
+++ b/Assignment5/Assignment5(3).html
@@ -106,7 +106,34 @@ max-height:25%;}
     left:63%;
     max-width:45%;
 max-height:25%;}
-
+.Broadway{left:200%;
+    top:112%;
+}
+}
+@media only screen and (max-width:800px) {
+    .Broadway{left:3%;
+    top:125%;
+}
+.Aladdin{left:10%;
+        top:78%;
+        font-size:50px;
+    }
+    .A{ top:7%;
+    left:53%;
+    max-width:40%;
+max-height:20%;}
+.L{top:37%;
+    left:53%;
+    max-width:40%;
+max-height:20%;}
+.a{top:67%;
+    left:53%;
+    max-width:40%;
+max-height:20%;}
+.description{font-size:10px;
+    top:38%;
+left:10%;
+width:150px;}
 }
 </style>
 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/h4sl3sQPzgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
