--- a/Assignment6/Assignment6(3).html
+++ b/Assignment6/Assignment6(3).html
@@ -13,5 +13,7 @@
       </head>
 <body>
     <div class="hello"></div>
+    <div class="description">Time-on-Page</div>
+    <div class="counting"><label id="minutes">:00</label>:<label id="seconds">00</label></div>
 </body>
 </html>
