--- a/Assignment11/Assignemnt11.html
+++ b/Assignment11/Assignemnt11.html
@@ -18,6 +18,7 @@
         </form>
         <p class="feedback" id="feedback"></p>
       </div>
+      <div class="hint">Hint:Pressing different keys to change the background color!</div>
       <div id="a"></div>
       <div id="b"></div>
       <div id="c"></div>
