--- a/Assignment1/scene1.html
+++ b/Assignment1/scene1.html
@@ -10,7 +10,7 @@
     /*Add optional CSS here*/
     body{background-color:#c7c2a3;
         font-family: 'EB Garamond', serif;}
-    img{position:absolute；
+    img{position:absolute;
 max-width:650px;
 max-height:600px;
 height:600px; 
