--- a/Portfolio/yuntongchen_portfolio.html
+++ b/Portfolio/yuntongchen_portfolio.html
@@ -1,16 +1,30 @@
 <html lang="en" data-predefined-style="true" data-css-presets="true" data-css-preset="" data-typography-preset="" style="font-size: 42.12%; --following-width:-400px; --following-animation-duration:450ms;"><head>
 
   <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Oxygen&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;300&family=Oxygen&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./yuntongchen_portfolio.css" />
 
-<div class="fixedname">YuntongChen</div>
-  <div class="column">Brand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Web&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Motion graphics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editorial&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Others</div>
 
-<div class="description">Graphic Designer currently based in NYC with a passion for the fields of branding, motions graphics, editorial.</div>
+<div class="description">Graphic Designer based in NYC with a passion for the fields of branding, motions graphics, editorial.</div>
 <div class="info">Instagram<br/>
   email<br/>
   resume</div>
 
-<div class="caption">Brand Design <br/>Spring 2023</div>
+<div class="caption"><div class="title">OnClick <br/>2023<br/></div>creating brand identity for the moving company OnClick <br/><br/>Read More
+<div class="DNAtitle">DNA Tailor<br/>2022<div class="DNA">a brand sheds light on potential social issue about DNA editing towards the future<br/><br/>Read More</div></div>
+
+
+
+</div>
   
+<div class="imagecontainer">
+  <img class="onclick" src="Image/home/OnClick building.jpg"><br/><br/><br/>
+  <img class="DNA" src="Image/home/DNA.jpg"><br/><br/><br/>
+  <img class="perfecthome" src="Image/home/Perfecthome.png">&nbsp;&nbsp;<img class="perfecthome" src="Image/home/perfecthome2.jpg">
+  <img src="">
+  <img src="">
+</div>
+<div class="blankbox"></div>
+<div class="fixedname">YuntongChen</div>
+  <div class="column">Brand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Web&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Motion graphics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editorial&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Others</div>
