--- a/Portfolio/yuntongchen_portfolio.html
+++ b/Portfolio/yuntongchen_portfolio.html
@@ -5,13 +5,20 @@
 
     <link rel="stylesheet" type="text/css" href="./yuntongchen_portfolio.css" />
 
+    <style>      
+      a:visited {
+        color:grey;
+        background-color: transparent;
+        text-decoration:none;
+      }
+      </style>    
 
 <div class="description">Graphic Designer based in NYC with a passion for the fields of branding, motions graphics, editorial.</div>
 <div class="info">Instagram<br/>
   email<br/>
   resume</div>
 
-<div class="caption"><div class="title">OnClick <br/>2023<br/></div>creating brand identity for the moving company OnClick <br/><br/>Read More
+<div class="caption"><div class="title">OnClick <br/>2023<br/></div>brand identity for a moving company<br/><br/><a href="./yuntongchen_portfolioOnclick.html">Read More</a>
 <div class="DNAtitle">DNA Tailor<br/>2022<div class="DNA">a brand sheds light on potential social issue about DNA editing towards the future<br/><br/>Read More</div></div>
 
 
@@ -21,8 +28,7 @@
 <div class="imagecontainer">
   <img class="onclick" src="Image/home/OnClick building.jpg"><br/><br/><br/>
   <img class="DNA" src="Image/home/DNA.jpg"><br/><br/><br/>
-  <img class="perfecthome" src="Image/home/Perfecthome.png">&nbsp;&nbsp;<img class="perfecthome" src="Image/home/perfecthome2.jpg">
-  <img src="">
+  <img class="plexiglass" src="./Image/home/on Plexiglass mockup copy.jpg">
   <img src="">
 </div>
 <div class="blankbox"></div>
