--- a/Portfolio/yuntongchen_portfolio.html
+++ b/Portfolio/yuntongchen_portfolio.html
@@ -28,8 +28,8 @@
 <div class="imagecontainer">
   <img class="onclick" src="Image/home/OnClick building.jpg"><br/><br/><br/>
   <img class="DNA" src="Image/home/DNA.jpg"><br/><br/><br/>
-  <img class="plexiglass" src="./Image/home/on Plexiglass mockup copy.jpg">
-  <img src="">
+  <img class="plexiglass" src="./Image/home/on Plexiglass mockup copy.jpg"><br/><br/><br/>
+  <img class="plexiglass" src="./Image/home/pixelated city.png">
 </div>
 <div class="blankbox"></div>
 <div class="fixedname">YuntongChen</div>
