--- a/Portfolio/yuntongchen_portfolio.html
+++ b/Portfolio/yuntongchen_portfolio.html
@@ -18,8 +18,8 @@
   email<br/>
   resume</div>
 
-<div class="caption"><div class="title">OnClick <br/>2023<br/></div>brand identity for a moving company<br/><br/><a href="./yuntongchen_portfolioOnclick.html">Read More</a>
-<div class="DNAtitle">DNA Tailor<br/>2022<div class="DNA">a brand sheds light on potential social issue about DNA editing towards the future<br/><br/>Read More</div></div>
+<div class="caption"><div class="title">OnClick <br/>2023<br/></div>brand identity for a moving company<br/><a href="./yuntongchen_portfolioOnclick.html">Read More</a>
+<div class="DNAtitle">DNA Tailor<br/>2022<div class="DNA">a brand sheds light on potential social issue about DNA editing towards the future<br/><a href="./DNA Tailor.html">Read More</a></div></div>
 
 
 
