--- a/Portfolio/yuntongchen_portfolioOnclick.html
+++ b/Portfolio/yuntongchen_portfolioOnclick.html
@@ -7,7 +7,7 @@
 
       <img class="gif" src="./Image/home/motion_final_color1.gif">
       <img class="onclick" src="Image/home/OnClick building.jpg"><br/><br/><br/>
-      <img class="guideline" src="./Image/Onclick/brand guideline onclick.gif">
+      <img class="guideline" src="./Image/Onclick/brand guideline.gif">
       <img class="card" src="./Image/Onclick/business card mockup.jpg">
       <div class="descriptiononclick">OnClick<br/>Brand Identity</div>
       <div class="description">Yuntong Chen <br/> Graphic Designer based in NYC with a passion for the fields of branding, motions graphics, editorial.</div>
